@@ -11,6 +11,9 @@ http://issues.apache.org/cayenne/
 Release: 3.0.3
 Date: 
 ----------------------------------
+Changes/New Features Since 3.0.2:
+
+CAY-1584 Improve Cayenne modeler re-ordering named query in the cayenne map xml
 
 Bug Fixes Since 3.0.2:
 
